# misra_examples

./: CMakeLists.txt  README.md
.PVS-Studio/State/: ReportState.json  WindowState.json
include/misra_examples/: abstract.cpp  abstract_misra.cpp  decorator.cpp  decorator_misra.cpp  strategy.cpp  strategy_misra.cpp
